syntax = "proto3";
package tunnel.v1beta1;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "cosmos_proto/cosmos.proto";

import "feeds/v1beta1/feeds.proto";

option go_package            = "github.com/bandprotocol/chain/v2/x/tunnel/types";
option (gogoproto.equal_all) = true;

message TSSRoute {
  option (cosmos_proto.implements_interface) = "Route";

  string destination_chain_id         = 1 [(gogoproto.customname) = "DestinationChainID"];
  string destination_contract_address = 2;
}

message AxelarRoute {
  option (cosmos_proto.implements_interface) = "Route";

  string destination_chain_id         = 1 [(gogoproto.customname) = "DestinationChainID"];
  string destination_contract_address = 2;
}

message SignalInfo {
  option (gogoproto.equal) = true;

  string signal_id     = 1 [(gogoproto.customname) = "SignalID"];
  uint64 deviation_bps = 2 [(gogoproto.customname) = "DeviationBPS"];
  uint64 interval      = 3;
}

message SignalPriceInfo {
  option (gogoproto.equal) = true;

  string                    signal_id     = 1 [(gogoproto.customname) = "SignalID"];
  uint64                    deviation_bps = 2 [(gogoproto.customname) = "DeviationBPS"];
  uint64                    interval      = 3;
  uint64                    price         = 4;
  google.protobuf.Timestamp LastTimestamp = 5 [(gogoproto.stdtime) = true];
}

message Tunnel {
  option (gogoproto.equal) = true;

  uint64                    id                          = 1 [(gogoproto.customname) = "ID"];
  google.protobuf.Any       route                       = 2 [(cosmos_proto.accepts_interface) = "Route"];
  feeds.v1beta1.FeedType    feed_type                   = 3;
  string                    fee_payer                   = 4 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  repeated SignalPriceInfo  signal_price_infos          = 5 [(gogoproto.nullable) = false];
  uint64                    last_triggered_block_height = 6;
  bool                      is_active                   = 7;
  google.protobuf.Timestamp created_at                  = 8 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
  string                    creator                     = 9 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

message TSSPacket {
  option (gogoproto.equal) = true;

  uint64                   id                 = 1 [(gogoproto.customname) = "ID"];
  uint64                   tunnel_id          = 2 [(gogoproto.customname) = "TunnelID"];
  repeated SignalPriceInfo signal_price_infos = 3;
  uint64                   signing_id         = 4 [
    (gogoproto.customname) = "SigningID",
    (gogoproto.casttype)   = "github.com/bandprotocol/chain/v2/pkg/tss.SigningID"
  ];
  string                    destination_chain_id         = 5 [(gogoproto.customname) = "DestinationChainID"];
  string                    destination_contract_address = 6;
  google.protobuf.Timestamp created_at                   = 7 [(gogoproto.stdtime) = true];
}

message AxelarPacket {
  option (gogoproto.equal) = true;

  uint64                    id                           = 1 [(gogoproto.customname) = "ID"];
  uint64                    tunnel_id                    = 2 [(gogoproto.customname) = "TunnelID"];
  repeated SignalPriceInfo  signal_price_infos           = 3;
  uint64                    ibc_queue_id                 = 4 [(gogoproto.customname) = "IBCQueueID"];
  string                    destination_chain_id         = 5 [(gogoproto.customname) = "DestinationChainID"];
  string                    destination_contract_address = 6;
  google.protobuf.Timestamp created_at                   = 7 [(gogoproto.stdtime) = true];
}
